// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple comments are parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment 1 */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment 2 */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with a named single line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
                "declaredName": "Comment",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with multi line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is
             * a comment
             */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with named documentation: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* this is a doc */",
                "declaredName": "Doc",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with single line comment without a keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with single line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation with keyword and no name: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "TextualRepresentation",
          "about": [],
          "body": "/* self.x > 0.0 */",
          "language": ""OCL"",
          "prefixes": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation with keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "TextualRepresentation",
          "about": [],
          "body": "/* self.x > 0.0 */",
          "declaredName": "inOCL",
          "language": ""OCL"",
          "prefixes": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation without keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "TextualRepresentation",
                "about": [],
                "body": "/* <a href="https://plm.elsewhere.com/part?id="1234"/> */",
                "language": ""HTML"",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "declaredName": "B",
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`elements are parseable with annotations with unnamed documentation: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* this is a doc */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;
